Activity Basic Types Runner

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -14,6 +14,59 @@
   "play": "Play",
   "admin": "Organizer",
   "enter": "Enter",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "back": "Back",
+  "activity_not_implemented": "This type of activity is not yet implemented",
+  "photo_instruction": "Take a photo to complete this test",
+  "video_instruction": "Record a video to complete this test",
+  "retake": "Retake",
+  "submit": "Submit",
+  "uploading": "Uploading...",
+  "upload_failed": "Upload failed. Please try again.",
+  "cancel": "Cancel",
+  "take_photo": "Take Photo",
+  "start_camera": "Start Camera",
+  "start_video": "Start Video",
+  "start_recording": "Start Recording",
+  "stop_recording": "Stop Recording",
+  "camera_error": "Error accessing camera. Check permissions.",
+  "no_camera_available": "Camera not available",
+  "or_upload_file": "Or upload a file from your device",
+  "upload_image": "Upload Image",
+  "upload_video": "Upload Video",
+  "invalid_image_file": "Please select a valid image file",
+  "invalid_video_file": "Please select a valid video file",
+  "close": "Close",
+  "start_activity": "Start Activity",
+  "view_activity_image": "View activity image",
+  "activity_proximity_text": "You are near the activity \"{{activityName}}\"! Do you want to start it?",
+  "debug_panel": "DEBUG PANEL",
+  "reset_timer": "Reset Timer",
+  "timer_reset": "Timer reset",
+  "current_time": "Current Time",
+  "activity_debug": "Activity Debug",
+  "activity_completed": "Activity Completed",
+  "activity_failed": "Activity Failed",
+  "activity_success": "Congratulations! You have successfully completed the activity",
+  "activity_failure": "Sorry, you have not completed the activity",
+  "points_earned": "Points earned",
+  "current_team_points": "Current team points",
+  "continue": "Continue",
+  "back_to_map": "Back to map",
+  "end_timer": "End Timer",
+  "test_question": "Test Question",
+  "open_question": "Open Question",
+  "enter_your_answer": "Enter your answer here...",
+  "type_your_answer": "Type your answer...",
+  "submit_answer": "Submit Answer",
+  "submitted": "Submitted",
+  "exit": "Exit",
+  "question_not_found": "Question not found",
+  "time_expired": "Time expired",
+  "pending_review": "Pending Review",
+  "pending_review_title": "Answer Submitted",
+  "pending_review_message": "Your answer has been submitted successfully. The organizer will review your answer and assign the corresponding points.",
+  "pending_review_note": "You will receive points once the organizer has reviewed your answer.",
+  "back_to_activities": "Back to Activities"
 }
 
