--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -14,5 +14,58 @@
   "play": "Jugar",
   "admin": "Organizador",
   "enter": "Entrar",
-  "loading": "Cargando..."
+  "loading": "Cargando...",
+  "back": "Volver",
+  "activity_not_implemented": "Este tipo de actividad aún no está implementado",
+  "photo_instruction": "Toma una foto para completar esta prueba",
+  "video_instruction": "Graba un video para completar esta prueba",
+  "retake": "Repetir",
+  "submit": "Enviar",
+  "uploading": "Subiendo...",
+  "upload_failed": "Error al subir archivo. Inténtalo de nuevo.",
+  "cancel": "Cancelar",
+  "take_photo": "Tomar Foto",
+  "start_camera": "Iniciar Cámara",
+  "start_video": "Iniciar Video",
+  "start_recording": "Iniciar Grabación",
+  "stop_recording": "Detener Grabación",
+  "camera_error": "Error al acceder a la cámara. Verifica los permisos.",
+  "no_camera_available": "No se puede acceder a la cámara",
+  "or_upload_file": "O sube un archivo desde tu dispositivo",
+  "upload_image": "Subir Imagen",
+  "upload_video": "Subir Video",
+  "invalid_image_file": "Por favor selecciona un archivo de imagen válido",
+  "invalid_video_file": "Por favor selecciona un archivo de video válido",
+  "close": "Cerrar",
+  "start_activity": "Iniciar Actividad",
+  "view_activity_image": "Ver imagen de la actividad",
+  "activity_proximity_text": "¡Estás cerca de la actividad \"{{activityName}}\"! ¿Deseas iniciarla?",
+  "debug_panel": "PANEL DEBUG",
+  "reset_timer": "Reiniciar Tiempo",
+  "timer_reset": "Tiempo reiniciado",
+  "current_time": "Tiempo Actual",
+  "activity_debug": "Debug Actividad",
+  "activity_completed": "Actividad Completada",
+  "activity_failed": "Actividad Fallida",
+  "activity_success": "¡Felicidades! Has completado la actividad exitosamente",
+  "activity_failure": "Lo siento, no has completado la actividad",
+  "points_earned": "Puntos ganados",
+  "current_team_points": "Puntos actuales del equipo",
+  "continue": "Continuar",
+  "back_to_map": "Volver al mapa",
+  "end_timer": "Terminar Tiempo",
+  "test_question": "Pregunta Test",
+  "open_question": "Pregunta Abierta",
+  "enter_your_answer": "Escribe tu respuesta aquí...",
+  "type_your_answer": "Escribe tu respuesta...",
+  "submit_answer": "Enviar Respuesta",
+  "submitted": "Enviado",
+  "exit": "Salir",
+  "question_not_found": "No se encontró la pregunta",
+  "time_expired": "Se agotó el tiempo",
+  "pending_review": "Pendiente de Valoración",
+  "pending_review_title": "Respuesta Enviada",
+  "pending_review_message": "Tu respuesta ha sido enviada correctamente. El organizador valorará tu respuesta y asignará los puntos correspondientes.",
+  "pending_review_note": "Recibirás los puntos una vez que el organizador haya revisado tu respuesta.",
+  "back_to_activities": "Volver a Actividades"
 }
