--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -15,6 +15,23 @@
   "admin": "Organizador",
   "admin.mode": "Modo Organizador",
   "admin.tools_coming_soon": "Herramientas de organización (próximamente)",
+  "admin.session_control": "Control de Sesión",
+  "session_control": {
+    "title": "Control de Sesión",
+    "subtitle": "Administra las sesiones y dispositivos del evento",
+    "current_session": "Sesión Actual",
+    "mode": "Modo",
+    "team_mode": "Modo Equipo",
+    "selected_team": "Equipo Seleccionado",
+    "device_token": "Token del Dispositivo",
+    "clear_local_session": "Cerrar Sesión Local",
+    "confirm_clear_local": "¿Estás seguro de que quieres cerrar la sesión local? Se eliminarán todos los datos guardados en este dispositivo.",
+    "associated_teams": "Equipos Asociados",
+    "no_associated_teams": "No hay equipos asociados a dispositivos",
+    "device": "Dispositivo",
+    "disassociate": "Desasociar",
+    "confirm_disassociate": "¿Estás seguro de que quieres desasociar el equipo \"{{teamName}}\" de su dispositivo?"
+  },
   "enter": "Entrar",
   "loading": "Cargando...",
   "back": "Volver",
