--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -17,6 +17,9 @@
   "admin.tools_coming_soon": "Herramientas de organización (próximamente)",
   "admin.session_control": "Control de Sesión",
   "admin.suspend_event": "Suspender Evento",
+  "admin.ranking": "Ver ranking",
+  "admin.photo_management": "Gestión de Fotos",
+  "admin.valorate_activities": "Valorar actividades",
   "suspend": {
     "confirm_title": "Confirmar Suspensión",
     "confirm_message": "¿Estás seguro de que quieres suspender el evento? Ningún equipo podrá realizar pruebas hasta que se reactive.",
@@ -170,5 +173,70 @@
     "admin_description": "Aquí podrás gestionar los gadgets disponibles para los equipos.",
     "manage_gadgets": "Gestionar Gadgets"
   },
-  "clue_understood": "Entendido"
+  "clue_understood": "Entendido",
+  "valorate": {
+    "title": "Valorar Actividades",
+    "no_pending": "No hay actividades pendientes de valoración",
+    "all_reviewed": "Todas las actividades han sido revisadas",
+    "pending_count": "Pendientes de valorar",
+    "team": "Equipo",
+    "points": "Puntos",
+    "completed": "Completada",
+    "unknown_time": "Tiempo desconocido",
+    "type_question": "Pregunta",
+    "type_clue": "Pista",
+    "type_media": "Foto/Video",
+    "type_unknown": "Desconocido",
+    "not_found": "Actividad no encontrada",
+    "questions_answers": "Preguntas y Respuestas",
+    "question": "Pregunta",
+    "answer": "Respuesta del equipo",
+    "no_answer": "Sin respuesta",
+    "test_question": "Pregunta tipo test",
+    "test_completed": "Esta actividad fue completada automáticamente (pregunta tipo test)",
+    "media_activity": "Actividad de Foto/Video",
+    "media_instruction": "Revisa el contenido multimedia subido por el equipo para esta actividad.",
+    "upload_info": "Información de subida",
+    "note": "Nota",
+    "media_note": "Para ver el contenido multimedia completo, accede al sistema de archivos del servidor o base de datos.",
+    "activity_details": "Detalles de la Actividad",
+    "no_description": "Sin descripción disponible",
+    "activity_data": "Datos de la actividad",
+    "award_points": "Otorgar Puntos",
+    "points_description": "Introduce los puntos a otorgar al equipo por esta actividad (0 para marcar como revisada sin puntos)",
+    "suggested": "Sugerido",
+    "submitting": "Enviando...",
+    "submit": "Valorar Actividad",
+    "success": "Actividad Valorada",
+    "points_awarded": "Se han otorgado {{points}} puntos al equipo {{team}}",
+    "points_updated": "Se han actualizado los puntos de la actividad. Total otorgado: {{points}} puntos",
+    "activity_reviewed": "La actividad ha sido marcada como revisada",
+    "error": "Error",
+    "negative_points_error": "Los puntos no pueden ser negativos",
+    "update_error": "Error al actualizar la valoración de la actividad",
+    "already_valued": "Actividad Ya Valorada",
+    "already_valued_desc": "Esta actividad ya ha sido valorada y revisada anteriormente.",
+    "edit_valued_desc": "Esta actividad ya ha sido valorada. Puedes modificar los puntos otorgados si es necesario.",
+    "reviewed": "Revisada",
+    "review_note": "Puedes revisar el contenido, pero la actividad ya está marcada como completada.",
+    "awarded_points": "Puntos Otorgados",
+    "current_points": "Puntos actuales",
+    "update": "Actualizar Puntos"
+  },
+  "photo_management": {
+    "title": "Gestión de Fotos/Videos",
+    "no_activities": "No hay actividades de foto/video",
+    "no_activities_desc": "Aún no se han completado actividades de foto o video",
+    "total_activities": "Actividades de foto/video",
+    "pending_count": "Pendientes de revisar",
+    "reviewed_count": "Revisadas",
+    "team": "Equipo",
+    "points": "Puntos",
+    "awarded": "otorgados",
+    "completed": "Completada",
+    "unknown_time": "Tiempo desconocido",
+    "pending_review": "Pendiente de revisar",
+    "reviewed": "Revisada",
+    "has_media": "Contenido multimedia disponible"
+  }
 }
