--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,6 +17,9 @@
   "admin.tools_coming_soon": "Organization tools (coming soon)",
   "admin.session_control": "Session Control",
   "admin.suspend_event": "Suspend Event",
+  "admin.ranking": "View ranking",
+  "admin.photo_management": "Photo Management",
+  "admin.valorate_activities": "Rate activities",
   "suspend": {
     "confirm_title": "Confirm Suspension",
     "confirm_message": "Are you sure you want to suspend the event? No team will be able to perform tests until reactivated.",
@@ -170,6 +173,71 @@
     "admin_description": "Here you can manage the gadgets available to teams.",
     "manage_gadgets": "Manage Gadgets"
   },
-  "clue_understood": "Understood"
+  "clue_understood": "Understood",
+  "valorate": {
+    "title": "Rate Activities",
+    "no_pending": "No activities pending rating",
+    "all_reviewed": "All activities have been reviewed",
+    "pending_count": "Pending rating",
+    "team": "Team",
+    "points": "Points",
+    "completed": "Completed",
+    "unknown_time": "Unknown time",
+    "type_question": "Question",
+    "type_clue": "Clue",
+    "type_media": "Photo/Video",
+    "type_unknown": "Unknown",
+    "not_found": "Activity not found",
+    "questions_answers": "Questions and Answers",
+    "question": "Question",
+    "answer": "Team answer",
+    "no_answer": "No answer",
+    "test_question": "Test question",
+    "test_completed": "This activity was completed automatically (test question)",
+    "media_activity": "Photo/Video Activity",
+    "media_instruction": "Review the multimedia content uploaded by the team for this activity.",
+    "upload_info": "Upload information",
+    "note": "Note",
+    "media_note": "To view the complete multimedia content, access the server file system or database.",
+    "activity_details": "Activity Details",
+    "no_description": "No description available",
+    "activity_data": "Activity data",
+    "award_points": "Award Points",
+    "points_description": "Enter the points to award to the team for this activity (0 to mark as reviewed without points)",
+    "suggested": "Suggested",
+    "submitting": "Submitting...",
+    "submit": "Rate Activity",
+    "success": "Activity Rated",
+    "points_awarded": "{{points}} points have been awarded to team {{team}}",
+    "points_updated": "Activity points have been updated. Total awarded: {{points}} points",
+    "activity_reviewed": "The activity has been marked as reviewed",
+    "error": "Error",
+    "negative_points_error": "Points cannot be negative",
+    "update_error": "Error updating activity rating",
+    "already_valued": "Activity Already Rated",
+    "already_valued_desc": "This activity has already been rated and reviewed previously.",
+    "edit_valued_desc": "This activity has already been rated. You can modify the awarded points if necessary.",
+    "reviewed": "Reviewed",
+    "review_note": "You can review the content, but the activity is already marked as completed.",
+    "awarded_points": "Awarded Points",
+    "current_points": "Current points",
+    "update": "Update Points"
+  },
+  "photo_management": {
+    "title": "Photo/Video Management",
+    "no_activities": "No photo/video activities",
+    "no_activities_desc": "No photo or video activities have been completed yet",
+    "total_activities": "Photo/video activities",
+    "pending_count": "Pending review",
+    "reviewed_count": "Reviewed",
+    "team": "Team",
+    "points": "Points",
+    "awarded": "awarded",
+    "completed": "Completed",
+    "unknown_time": "Unknown time",
+    "pending_review": "Pending review",
+    "reviewed": "Reviewed",
+    "has_media": "Multimedia content available"
+  }
 }
 
